talos/manifests/homeassistant-ingress.yaml
# manifests/homeassistant-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`homeassistant.truxonline.com`)
    kind: Rule
    services:
    - name: homeassistant-ext
      port: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-ext
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.201.51
  ports:
  - port: 8123
